php-payment-office/php-payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-payment-office
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-payment-office
  template:
    metadata:
      labels:
        app: php-payment-office
    spec:
      containers:
      - name: php-payment-office
        image: wolihi/php-payment-office:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 7789
