php-payment-office/php-payment-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-php-payment-office
  namespace: default
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    wginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Real-IP $http_x_forwarded_for;
spec:
  rules:
  - host: www.frutrops.com
    http:
      paths:
      - backend:
          serviceName: php-payment-office-svc
          servicePort: 7789
        path: /
  - host: frutrops.com
    http:
      paths:
      - backend:
          serviceName: php-payment-office-svc
          servicePort: 7789
        path: /
